# macOS-dev-setup-scripts

./: LICENSE  README.md  brew_install.sh  brew_install_apps.sh  brew_setup.sh  conda.md  convert_audio.sh  dev_setup.sh  eduroam-OS_X-UPFdB-UPF.mobileconfig  install.sh  pyproject.toml  rename_audio.sh  slurm-notes.md  slurm.md  slurm_srun.sh
brew/: brew-relink.sh  brew_install_apps.sh
core/: audio-apps.sh  casks.sh  customizations.sh  finder.sh  homebrew.sh  installing_pkg.sh  jekyll.sh  vscode.sh
docs/: conda_setup_hpc.md  macports.md
dotfiles/: .bash_profile
homebrew/: brew install_packages.sh  brew_setup.sh  install_casks.sh  install_packages.sh  pyenv_post_installation.sh  terminal_settings.sh
legacy/: casks.sh  customizations.sh  homebrew.sh  install_pkg.sh  pyenv.sh  setup_mac.sh
port/: port_setup.sh
preferences/: extensions.list  finder_preferences.plist  terminal_preferences.plist  vscode_extensions.list
preferences/vscode/: settings.json
scripts/: brew_install_casks.sh  brew_install_packages.sh  brew_setup.sh  custom_terminal.sh  finder.sh  flac_to_wav.sh  pyenv-post-installation.sh  rename_audio.sh
src/: install_jekyll.py  install_node_react.py  install_pkg.py  setup_mac.py
terminal/: settings.terminal
vim/: vimrc
