[tool.poetry]
name = "macos-dev-setup-scripts"
version = "0.1.0"
description = "A collection of scripts for setting up a macOS development environment."
authors = ["Francesco Papaleo <francesco.papaleo@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
# List your package dependencies here, for example:


[tool.poetry.dev-dependencies]
# List development dependencies here, for example:

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
